general/src/datascrubbing/snapshots/tests__sanitize_credit_card_within_value_1.snap
---
created: "2019-08-28T17:50:10.458377Z"
creator: insta@0.10.1
source: general/src/datascrubbing/convert.rs
expression: data.to_json_pretty().unwrap()
---
{
  "extra": {
    "foo": "'[creditcard]'"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@creditcard",
              "s",
              1,
              13
            ]
          ],
          "len": 18
        }
      }
    }
  }
}
