general/src/datascrubbing/snapshots/tests__sanitize_credit_card_within_value_2.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "foo [filtered]"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              4,
              14
            ]
          ],
          "len": 20
        }
      }
    }
  }
}
