general/src/datascrubbing/snapshots/tests__sanitize_http_body.snap
---
source: general/src/datascrubbing/convert.rs
expression: data.value().unwrap().request
---
{
  "data": {
    "email": "zzzz@gmail.com",
    "password": null
  },
  "inferred_content_type": "application/json",
  "_meta": {
    "data": {
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      }
    }
  }
}
