general/src/datascrubbing/snapshots/tests__sanitize_http_body_string.snap
---
source: general/src/datascrubbing/convert.rs
expression: data.value().unwrap().request
---
{
  "data": "[Filtered]",
  "_meta": {
    "data": {
      "": {
        "rem": [
          [
            "@password:filter",
            "s",
            0,
            10
          ]
        ],
        "len": 48
      }
    }
  }
}
