general/src/datascrubbing/snapshots/tests__sanitize_url_1.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "pg://matt:[email]/1"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@email",
              "s",
              10,
              17
            ]
          ],
          "len": 26
        }
      }
    }
  }
}
