general/src/datascrubbing/snapshots/tests__sanitize_url_2.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "foo 'redis://redis:[email]:6379/0' bar"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@email",
              "s",
              19,
              26
            ]
          ],
          "len": 44
        }
      }
    }
  }
}
