general/src/datascrubbing/snapshots/tests__sanitize_url_3.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "'redis://redis:[filtered]:6379/0'"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@email:filter",
              "s",
              15,
              25
            ]
          ],
          "len": 36
        }
      }
    }
  }
}
