general/src/datascrubbing/snapshots/tests__sanitize_url_4.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "foo redis://redis:[filtered]:6379/0 bar"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@email:filter",
              "s",
              18,
              28
            ]
          ],
          "len": 42
        }
      }
    }
  }
}
