general/src/datascrubbing/snapshots/tests__sanitize_url_6.snap
---
created: "2019-08-28T17:42:00.321224Z"
creator: insta@0.10.1
source: general/src/datascrubbing/convert.rs
expression: data.to_json_pretty().unwrap()
---
{
  "extra": {
    "foo": "postgres:///path"
  }
}
