general/src/datascrubbing/snapshots/tests__sanitize_url_7.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "extra": {
    "foo": "{\"a\":\"https://localhost\",\"b\":\"[filtered]\",\"c\":\"pg://matt:[filtered]/1\",\"d\":\"lol\"}"
  },
  "_meta": {
    "extra": {
      "foo": {
        "": {
          "rem": [
            [
              "@email:filter",
              "s",
              30,
              40
            ],
            [
              "@email:filter",
              "s",
              57,
              67
            ]
          ],
          "len": 88
        }
      }
    }
  }
}
