general/src/datascrubbing/snapshots/tests__sdk_client_ip_stripped.snap
---
source: general/src/datascrubbing/convert.rs
expression: data
---
{
  "sdk": {
    "client_ip": null
  },
  "_meta": {
    "sdk": {
      "client_ip": {
        "": {
          "rem": [
            [
              "@anything:remove",
              "x"
            ]
          ]
        }
      }
    }
  }
}
